--- a/ft_session_token/Cargo.toml
+++ b/ft_session_token/Cargo.toml
@@ -16,3 +16,7 @@ serde = {version = "1.0.215", features = ["derive"]}
 serde_json = "1.0.133"
 sha2 = "0.10.8"
 url = "2.5.4"
+
+[profile.release-lto]
+inherits = "release"
+lto = true
